// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should render correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your user name"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomColor": "#E7E8EA",
            "borderBottomWidth": 1,
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingRight": 25,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
  </View>
</View>
`;

exports[`TextInput Component should render placeholder 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your username"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomColor": "#E7E8EA",
            "borderBottomWidth": 1,
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingRight": 25,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
  </View>
</View>
`;

exports[`TextInput Component should render with label correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "#8F959E",
          "fontFamily": "Inter_400Regular",
          "fontSize": 13,
          "lineHeight": 14,
          "marginTop": 20,
        },
        Object {},
      ]
    }
  >
    Username
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your user name"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomColor": "#E7E8EA",
            "borderBottomWidth": 1,
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingRight": 25,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
  </View>
</View>
`;
